Verify consensus fault (#340)
Signed-off-by: turuslan <turuslan.devbox@gmail.com>

--- a/core/vm/runtime/CMakeLists.txt
+++ b/core/vm/runtime/CMakeLists.txt
@@ -14,15 +14,14 @@ add_library(runtime
 target_link_libraries(runtime
     actor
     blake2
-    bls_provider
     cgo_actors
     dvm
+    interpreter
     ipfs_datastore_error
     ipld_traverser
     keystore
     message
     proofs
-    secp256k1_provider
     tipset
     signature
     toolchain
