Added scheduler to ignore coverage list
Signed-off-by: ortyomka <iurin.art@gmail.com>

--- a/codecov.yml
+++ b/codecov.yml
@@ -4,3 +4,4 @@ ignore:
   - "core/sector_storage/impl/remote_*"
   - "core/sector_storage/impl/fetch_handler.cpp"
   - "core/sector_storage/zerocomm/*"
+  - "core/sector_storage/impl/scheduler_*"
