--- a/core/vm/actor/builtin/v0/storage_power/CMakeLists.txt
+++ b/core/vm/actor/builtin/v0/storage_power/CMakeLists.txt
@@ -7,7 +7,6 @@ add_library(storage_power_actor_v0
     storage_power_actor_state.cpp
     storage_power_actor_export.cpp
     storage_power_actor_utils.cpp
-    policy.cpp
     )
 target_link_libraries(storage_power_actor_v0
     actor
@@ -18,4 +17,5 @@ target_link_libraries(storage_power_actor_v0
     hamt
     multimap
     uvarint_key
+    storage_power_types
     )
