fix multisig swap
Signed-off-by: turuslan <turuslan.devbox@gmail.com>

--- a/test/core/vm/actor/builtin/v0/account/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v0/account/CMakeLists.txt
@@ -3,10 +3,10 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-addtest(account_actor_test_v0
+addtest(account_actor_v0_test
     account_actor_test.cpp
     )
-target_link_libraries(account_actor_test_v0
+target_link_libraries(account_actor_v0_test
     account_actor_v0
     ipfs_datastore_in_memory
     )
