--- a/test/core/vm/actor/builtin/v0/market/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v0/market/CMakeLists.txt
@@ -3,10 +3,10 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-addtest(market_actor_test_v0
+addtest(market_actor_v0_test
     test.cpp
     )
-target_link_libraries(market_actor_test_v0
+target_link_libraries(market_actor_v0_test
     comm_cid
     ipfs_datastore_in_memory
     market_actor_v0
