--- a/test/core/vm/actor/builtin/v2/init/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v2/init/CMakeLists.txt
@@ -3,10 +3,10 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-addtest(init_actor_test_v2
+addtest(init_actor_v2_test
     init_actor_test.cpp
     )
-target_link_libraries(init_actor_test_v2
+target_link_libraries(init_actor_v2_test
     init_actor_v2
     ipfs_datastore_in_memory
     )
