--- a/test/core/vm/actor/builtin/v0/multisig_actor/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v0/multisig_actor/CMakeLists.txt
@@ -3,10 +3,10 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-addtest(multisig_actor_test_v0
+addtest(multisig_actor_v0_test
     multisig_actor_test.cpp
     )
-target_link_libraries(multisig_actor_test_v0
+target_link_libraries(multisig_actor_v0_test
     multisig_actor_v0
     ipfs_datastore_in_memory
     )
