--- a/test/core/vm/actor/builtin/v3/account/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v3/account/CMakeLists.txt
@@ -3,10 +3,10 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-addtest(account_actor_test_v3
+addtest(account_actor_v3_test
     account_actor_test.cpp
     )
-target_link_libraries(account_actor_test_v3
+target_link_libraries(account_actor_v3_test
     account_actor_v3
     ipfs_datastore_in_memory
     )
