--- a/test/core/vm/actor/builtin/v3/cron/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v3/cron/CMakeLists.txt
@@ -3,10 +3,10 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-addtest(cron_actor_test_v3
+addtest(cron_actor_v3_test
     cron_actor_test.cpp
     )
-target_link_libraries(cron_actor_test_v3
+target_link_libraries(cron_actor_v3_test
     cron_actor_v3
     ipfs_datastore_in_memory
     )
