--- a/test/core/vm/actor/builtin/v3/init/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v3/init/CMakeLists.txt
@@ -3,10 +3,10 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-addtest(init_actor_test_v3
+addtest(init_actor_v3_test
     init_actor_test.cpp
     )
-target_link_libraries(init_actor_test_v3
+target_link_libraries(init_actor_v3_test
     init_actor_v3
     ipfs_datastore_in_memory
     )
