Added tests for manager
Signed-off-by: ortyomka <iurin.art@gmail.com>

--- a/test/core/sector_storage/CMakeLists.txt
+++ b/test/core/sector_storage/CMakeLists.txt
@@ -39,4 +39,6 @@ addtest(manager_test
 
 target_link_libraries(manager_test
         manager
+        base_fs_test
+        Boost::filesystem
         )
