--- a/core/vm/actor/CMakeLists.txt
+++ b/core/vm/actor/CMakeLists.txt
@@ -24,6 +24,7 @@ target_link_libraries(actor
     market_actor_v0
     miner_actor_v0
     miner_actor_v2
+    miner_actor_v3
     multisig_actor_v0
     multisig_actor_v2
     multisig_actor_v3
