--- a/core/vm/actor/builtin/v0/reward/CMakeLists.txt
+++ b/core/vm/actor/builtin/v0/reward/CMakeLists.txt
@@ -6,12 +6,12 @@
 add_library(reward_actor_v0
     reward_actor.cpp
     reward_actor_state.cpp
-    reward_actor_calculus.cpp
     )
 target_link_libraries(reward_actor_v0
     Boost::boost
     actor
     address
     exit_code
+    reward_types
     outcome
     )
