--- a/core/api/CMakeLists.txt
+++ b/core/api/CMakeLists.txt
@@ -23,6 +23,7 @@ add_library(rpc
     rpc/json_errors.cpp
     rpc/ws.cpp
     rpc/wsc.cpp
+    rpc/web_socket_client_error.cpp
     )
 target_link_libraries(rpc
     api
