safe guard and naming refactoring
Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

--- a/core/node/CMakeLists.txt
+++ b/core/node/CMakeLists.txt
@@ -25,6 +25,7 @@ target_link_libraries(sync
     p2p::libp2p_sqlite
     p2p::p2p_gossip
     p2p::p2p_identify
-    p2p::p2p_kademlia)
+    p2p::p2p_kademlia
+    )
 
 add_subdirectory(main)
