--- a/core/node/main/CMakeLists.txt
+++ b/core/node/main/CMakeLists.txt
@@ -5,7 +5,8 @@
 
 add_library(node_builder
     config.cpp
-    builder.cpp)
+    builder.cpp
+    )
 
 target_link_libraries(node_builder
     sync
