Event-based node components (#298)
* event-based node components added, build compatibility fixed

* event based node components update

* event based node: improvements, cleanups, fixes

* tipset argunemt to runtime randomness fns

* bugfixes regarding node startup

* pubsub workaround added, bugfixes

* api configs in node creation

* fixes

Signed-off-by: turuslan <turuslan.devbox@gmail.com>

* api startup

* global forward decls to core/fwd.hpp

* HeadChangeType event fix

* node event FatalError (to shutdown and not getting stuck on data inconsistency)

* persistent key for libp2p

* libp2p updated, build fixed

* peer discovery wrapper added

* fixes related to DHT creation

* added default graphsync server to node

* major reorgs in node stuff

* node bug fixes

* bugfixes

* node: load shapshot v1

* node: load shapshot v2

* snapshot load updated

* fixes in snapshot loading

* snapshotting before actors upd

* cgo actors v2.2.0->2.3.3

* snapshotting: interpret checks added

* update cgo

Signed-off-by: turuslan <turuslan.devbox@gmail.com>

* snapshotting: actors init little fix

* boost filesystem-related little correction

* docs on node objects, part 1

* minor corrections

* interpreter and cgo issues fixed

* fix regarding state tree version

* graphsync: some diagnostics added, stream timeout raised upto 15 min

* fixes regarding peer mgmt and reentrancy

* dont request messages for old tipsets

* Update core/node/main/config.cpp

Co-authored-by: Ruslan Tushov <turuslan@users.noreply.github.com>

* revert test-vectors

Signed-off-by: turuslan <turuslan.devbox@gmail.com>

* remove hwloc

Signed-off-by: turuslan <turuslan.devbox@gmail.com>

* revert interpreter

Signed-off-by: turuslan <turuslan.devbox@gmail.com>

* revert tipset

Signed-off-by: turuslan <turuslan.devbox@gmail.com>

* graphsync merkledag

Signed-off-by: turuslan <turuslan.devbox@gmail.co

--- a/core/node/CMakeLists.txt
+++ b/core/node/CMakeLists.txt
@@ -3,22 +3,29 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-add_library(node
-    blocksync.cpp
-    hello.cpp
-    peermgr.cpp
-    pubsub.cpp
-    )
-target_link_libraries(node
-    cbor_stream
+add_library(sync
+    peers.cpp
+    identify.cpp
+    say_hello.cpp
+    receive_hello.cpp
+    pubsub_gate.cpp
+    blocksync_request.cpp
+    blocksync_server.cpp
+    graphsync_server.cpp
+    sync_job.cpp
+    head_constructor.cpp
+    chain_store_impl.cpp
+    pubsub_workaround.cpp
+    peer_discovery.cpp
     )
 
-add_executable(node_main
-    main.cpp
+target_link_libraries(sync
+    cbor_stream
+    interpreter
+    p2p::libp2p_sqlite
+    p2p::p2p_gossip
+    p2p::p2p_identify
+    p2p::p2p_kademlia
     )
-target_link_libraries(node_main
-    Boost::program_options
-    clock
-    node
-    rpc
-    )
+
+add_subdirectory(main)
