Added tests for SectorStat
Signed-off-by: ortyomka <iurin.art@gmail.com>

--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -13,14 +13,15 @@ add_subdirectory(crypto)
 add_subdirectory(fslock)
 add_subdirectory(fsm)
 add_subdirectory(markets)
+add_subdirectory(miner)
+add_subdirectory(power)
+add_subdirectory(primitives)
 
 if (TESTING_PROOFS)
     add_subdirectory(proofs)
-    add_subdirectory(sector_storage)
 endif ()
 
-add_subdirectory(power)
-add_subdirectory(primitives)
+add_subdirectory(sector_storage)
 add_subdirectory(sectorblocks)
 add_subdirectory(serialization)
 add_subdirectory(storage)
