Added tipset cache tests Fixed tipset cache add function
Signed-off-by: ortyomka <iurin.art@gmail.com>

--- a/test/core/miner/CMakeLists.txt
+++ b/test/core/miner/CMakeLists.txt
@@ -8,3 +8,9 @@ addtest(sector_stat_test
         )
 target_link_libraries(sector_stat_test
         sector_stat)
+
+addtest(tipset_cache_test
+        tipset_cache_test.cpp
+        )
+target_link_libraries(tipset_cache_test
+        tipset_cache)
