--- a/test/core/miner/CMakeLists.txt
+++ b/test/core/miner/CMakeLists.txt
@@ -14,3 +14,10 @@ addtest(tipset_cache_test
         )
 target_link_libraries(tipset_cache_test
         tipset_cache)
+
+addtest(precommit_policy_test
+        precommit_policy_test.cpp
+        )
+target_link_libraries(precommit_policy_test
+        precommit_policy)
+
