params and policies configuration through profiles defined on startup
Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

--- a/core/miner/main/CMakeLists.txt
+++ b/core/miner/main/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(miner_main
     )
 target_link_libraries(miner_main
     Boost::program_options
+    const
     clock
     leveldb
     manager
