--- a/core/vm/CMakeLists.txt
+++ b/core/vm/CMakeLists.txt
@@ -7,7 +7,8 @@ add_subdirectory(actor)
 add_subdirectory(dvm)
 add_subdirectory(exit_code)
 add_subdirectory(interpreter)
+add_subdirectory(message)
 add_subdirectory(runtime)
 add_subdirectory(state)
 add_subdirectory(toolchain)
-add_subdirectory(message)
+add_subdirectory(version)
