--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(blockchain)
 add_subdirectory(clock)
 add_subdirectory(codec)
 add_subdirectory(common)
+add_subdirectory(config)
 add_subdirectory(crypto)
 add_subdirectory(data_transfer)
 add_subdirectory(drand)
