--- a/core/vm/actor/builtin/v0/miner/CMakeLists.txt
+++ b/core/vm/actor/builtin/v0/miner/CMakeLists.txt
@@ -12,10 +12,10 @@ target_link_libraries(miner_actor_v0
     address
     array
     cbor
-    const
     exit_code
     map
     rle_bitset
     sector
     uvarint_key
+    miner_types
     )
