--- a/core/miner/main/CMakeLists.txt
+++ b/core/miner/main/CMakeLists.txt
@@ -8,7 +8,7 @@ add_executable(miner_main
     )
 target_link_libraries(miner_main
     Boost::program_options
-    const
+    filecoin_config
     clock
     leveldb
     manager
