--- a/core/vm/actor/builtin/types/market/CMakeLists.txt
+++ b/core/vm/actor/builtin/types/market/CMakeLists.txt
@@ -3,13 +3,9 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-add_library(miner_types
-    deadline_info.cpp
+add_library(market_types
     policy.cpp
     )
-target_link_libraries(miner_types
-    actor
-    address
+target_link_libraries(market_types
     const
-    outcome
     )
