params and policies configuration through profiles defined on startup (#359)
Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

--- a/core/config/CMakeLists.txt
+++ b/core/config/CMakeLists.txt
@@ -3,12 +3,10 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-add_library(miner_types
-    deadline_info.cpp
+add_library(filecoin_config
+    profile_config.cpp
     )
-target_link_libraries(miner_types
-    actor
-    address
+target_link_libraries(filecoin_config
+    Boost::boost
     const
-    outcome
     )
