Added tests for sealing
Signed-off-by: ortyomka <iurin.art@gmail.com>

--- a/test/core/miner/CMakeLists.txt
+++ b/test/core/miner/CMakeLists.txt
@@ -27,3 +27,10 @@ addtest(tipset_cache_test
 target_link_libraries(tipset_cache_test
         tipset_cache)
 
+addtest(sealing_test
+        sealing_test.cpp
+        )
+target_link_libraries(sealing_test
+        storage_fsm
+        fuhon_host)
+
