--- a/core/primitives/stored_counter/CMakeLists.txt
+++ b/core/primitives/stored_counter/CMakeLists.txt
@@ -4,7 +4,7 @@
 #
 
 add_library(stored_counter
-        stored_counter.cpp
+        stored_counter_mock.cpp
         )
 target_link_libraries(stored_counter
         outcome
