--- a/test/core/storage/CMakeLists.txt
+++ b/test/core/storage/CMakeLists.txt
@@ -9,5 +9,6 @@ add_subdirectory(keystore)
 add_subdirectory(ipfs)
 add_subdirectory(ipld)
 add_subdirectory(leveldb)
+add_subdirectory(mpool)
 add_subdirectory(piece)
 add_subdirectory(unixfs)
