add API storage client methods
Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

--- a/core/markets/storage/client/CMakeLists.txt
+++ b/core/markets/storage/client/CMakeLists.txt
@@ -3,6 +3,8 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
+add_subdirectory(import_manager)
+
 add_library(storage_market_client
     impl/storage_market_client_impl.cpp
     impl/client_state_store.cpp
