storage market optimization - store raw CAR files without IPLD
Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

--- a/core/markets/storage/client/CMakeLists.txt
+++ b/core/markets/storage/client/CMakeLists.txt
@@ -22,4 +22,6 @@ target_link_libraries(storage_market_client
     market_actor_v0
     message
     tipset
+    ipfs_datastore_in_memory
+    storage_market_import_manager
     )
