check sector commit in storage market client
Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

--- a/core/node/main/CMakeLists.txt
+++ b/core/node/main/CMakeLists.txt
@@ -14,6 +14,7 @@ target_link_libraries(node_builder
     Boost::random
     block_validator
     car
+    chain_events
     cids_index
     clock
     drand_beacon
