Added test for Sealing process
Signed-off-by: ortyomka <iurin.art@gmail.com>

--- a/test/core/miner/CMakeLists.txt
+++ b/test/core/miner/CMakeLists.txt
@@ -32,5 +32,5 @@ addtest(sealing_test
         )
 target_link_libraries(sealing_test
         storage_fsm
-        fuhon_host)
+        ipfs_datastore_in_memory)
 
