[FIL-361] Miner Test coverage (#339)
* Added tests for LocalStore removeCopies

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Added tests for LocalSotre getAccessiblePaths

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Fixed reserve function

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Added tests for getters and reserve functions

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Added tests for sector index

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Added tests for selectors

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Fixed test for task selector

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Created Proof Engine abstraction

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Added tests for local worker finalize sector

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Added tests for worker seal functions

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Added tests for worker unseal, move and fetch functions

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Added tests for worker readPiece

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Added AddPiece tests for worker

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Added tests for manager

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Added generate tests for manager

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Added test for manager SealPreCommit1

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Added tests for manager seal functions

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Added tests for SectorStat

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Added tipset cache tests
Fixed tipset cache add function

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Added precommit policy tests

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Added tests for Height Events

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Added tests for sealing

Signed-off-by: ortyomka <iurin.art@gmail.com>

--- a/test/core/sector_storage/CMakeLists.txt
+++ b/test/core/sector_storage/CMakeLists.txt
@@ -6,6 +6,16 @@
 add_subdirectory(stores)
 add_subdirectory(zerocomm)
 
+addtest(selector_test
+        allocate_selector_test.cpp
+        existing_selector_test.cpp
+        task_selector_test.cpp
+        )
+
+target_link_libraries(selector_test
+        selector
+        )
+
 addtest(local_worker_test
         local_worker_test.cpp)
 
@@ -29,4 +39,6 @@ addtest(manager_test
 
 target_link_libraries(manager_test
         manager
+        base_fs_test
+        Boost::filesystem
         )
