--- a/test/core/vm/actor/builtin/types/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/types/CMakeLists.txt
@@ -2,7 +2,4 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-add_subdirectory(types)
-add_subdirectory(v0)
-add_subdirectory(v2)
-add_subdirectory(v3)
+add_subdirectory(miner)
