--- a/test/core/vm/actor/builtin/types/miner/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/types/miner/CMakeLists.txt
@@ -5,6 +5,7 @@
 
 addtest(miner_types_test
     quantize_test.cpp
+    bitfield_queue_test.cpp
     )
 target_link_libraries(miner_types_test
     miner_types
