--- a/test/core/miner/CMakeLists.txt
+++ b/test/core/miner/CMakeLists.txt
@@ -27,6 +27,13 @@ addtest(tipset_cache_test
 target_link_libraries(tipset_cache_test
         tipset_cache)
 
+addtest(deal_info_manager_test
+        deal_info_manager_test.cpp
+        )
+target_link_libraries(deal_info_manager_test
+        deal_info_manager
+        )
+
 addtest(sealing_test
         sealing_test.cpp
         )
