add retrieval market client to node
Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

--- a/core/node/main/CMakeLists.txt
+++ b/core/node/main/CMakeLists.txt
@@ -34,6 +34,7 @@ target_link_libraries(node_builder
     p2p::asio_scheduler
     p2p::p2p_random_generator
     pieceio
+    retrieval_market_client
     rpc
     runtime
     secp256k1_provider
