--- a/core/vm/actor/builtin/types/miner/CMakeLists.txt
+++ b/core/vm/actor/builtin/types/miner/CMakeLists.txt
@@ -5,6 +5,9 @@
 
 add_library(miner_types
     deadline_info.cpp
+    quantize.cpp
+    bitfield_queue.cpp
+    termination.cpp
     )
 target_link_libraries(miner_types
     actor
