--- a/core/markets/discovery/CMakeLists.txt
+++ b/core/markets/discovery/CMakeLists.txt
@@ -4,9 +4,10 @@
 #
 
 add_library(discovery
-    discovery.cpp
+    impl/discovery_impl.cpp
     )
 target_link_libraries(discovery
     cbor
+    cbor_stream
     outcome
     )
