--- a/core/markets/discovery/CMakeLists.txt
+++ b/core/markets/discovery/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(discovery
     impl/discovery_impl.cpp
     )
 target_link_libraries(discovery
+    address
     cbor
     cbor_stream
     outcome
