add API multi version support
Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

--- a/core/api/CMakeLists.txt
+++ b/core/api/CMakeLists.txt
@@ -3,24 +3,7 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-add_library(api
-    make.cpp
-    get_node.cpp
-    )
-target_link_libraries(api
-    address
-    block_producer
-    cid
-    const
-    interpreter
-    logger
-    message
-    miner_types
-    msg_waiter
-    state_tree
-    mpool
-    sync
-    )
+add_subdirectory(full_node)
 
 add_library(rpc
     rpc/json_errors.cpp
