--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,8 +70,8 @@ jobs:
         CFLAGS: ${{ matrix.env.CFLAGS }}
         CXXFLAGS: ${{ matrix.env.CXXFLAGS }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # has to be included to access other secrets
-        GITHUB_HUNTER_USERNAME: ${{ secrets.GITHUB_HUNTER_USERNAME }}
-        GITHUB_HUNTER_TOKEN: ${{ secrets.GITHUB_HUNTER_TOKEN }}
+        GITHUB_HUNTER_USERNAME: ${{ secrets.HUNTER_USERNAME }}
+        GITHUB_HUNTER_TOKEN: ${{ secrets.HUNTER_TOKEN }}
       run: cmake . -GNinja -Bbuild -D COVERAGE=ON -D TESTING_PROOFS=ON
     - name: build
       run: cmake --build build -- -j2
